--- a/package.json
+++ b/package.json
@@ -101,7 +101,8 @@
     "serve-static": "^1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.0",
-    "vue-template-compiler": "2.6.10"
+    "vue-template-compiler": "2.6.10",
+    "webpack-spritesmith": "^1.0.1"
   },
   "engines": {
     "node": ">=8.9",
